Fixed a lot of the spacing and fixed up some of the content on the Resume Page

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ textarea {
 }
 
 .top_pad {
-	padding-top: 6%;
+	padding-top: 3%;
 }
 
 .skill_box {
@@ -113,7 +113,7 @@ h2 {
 
 h3 {
 	margin: 0;
-	padding-top: 6%;
+	padding-top: 3%;
 }
 
 li {
@@ -123,5 +123,5 @@ li {
 .underline_center_top {
 	text-decoration: underline;
 	text-align: center;
-	padding-top: 6%;
+	padding-top: 3%;
 }
